# YontAI

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package.json  pnpm-lock.yaml  start-backend.sh  start_yontai.sh  tsconfig.base.json
apps/backend/: .env.example  alembic.ini  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_core_data_layer.py  2bdc9f07c75e_add_license_fields_to_models.py
apps/backend/tests/: test_export_and_lists.py  test_health.py  test_model_chat.py  test_platform_features.py
apps/backend/yontai/: main.py
apps/backend/yontai/api/: router.py
apps/backend/yontai/benchmarking/: persistence.py  service.py
apps/backend/yontai/core/: config.py  exceptions.py  hardware.py  paths.py  security.py
apps/backend/yontai/datasets/: service.py
apps/backend/yontai/db/: models.py  session.py
apps/backend/yontai/deployment/: service.py
apps/backend/yontai/diagnostics/: service.py
apps/backend/yontai/events/: bus.py  schemas.py
apps/backend/yontai/export/: service.py
apps/backend/yontai/integrations/: dynamic_prompt.py  mlx_provider.py  ollama.py  prompt_templates.py
apps/backend/yontai/jobs/: __init__.py  queue.py  schemas.py  worker.py
apps/backend/yontai/knowledge/: __init__.py  web_fetcher.py
apps/backend/yontai/models/: metadata.py  orchestrator.py  router.py  service.py
apps/backend/yontai/rag/: __init__.py  context_engine.py  memory_graph.py
apps/backend/yontai/repositories/: __init__.py  benchmarks.py  datasets.py  jobs.py  models.py  projects.py
officialWeb/: index.html
(+59 files in other folders)
